--- a/Lit.Client/Lit.Client.App/src/index.html
+++ b/Lit.Client/Lit.Client.App/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./bootstrap.css">
 </head>
-<body>
+<body style="background-color: antiquewhite;">
   <app-root></app-root>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
